--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,17 @@
 spring.application.name=Sticky_notes
 
-server.port=9090
+# Use PORT environment variable with fallback to 9090 for local development
+server.port=${PORT:9090}
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/deividasstropus
-spring.datasource.username=postgres
-spring.datasource.password=admin
+# Database configuration with environment variable fallbacks
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/deividasstropus}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:admin}
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Connection pool settings
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=2
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
