--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://localhost:/;
+        proxy_pass http://localhost:8081/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
