--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Application name for identification
 spring.application.name=Sticky_notes
 
-# Use PORT environment variable for Cloud Run with fallback to 8081 for local development
-server.port=${PORT:8081}
+# Use PORT environment variable for Cloud Run with fallback to 8082 for local development
+server.port=${PORT:8082}
 
 # Database connection settings
 # Use environment variables for Cloud Run, fallback to defaults for local development
@@ -35,3 +35,7 @@ management.endpoints.web.exposure.include=health,info
 # Logging settings for better visibility in Cloud Run (optional)
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=ERROR
+
+# CORS Configuration
+# Disable Spring's CORS handling as we're using a custom filter
+spring.web.cors.enabled=false
