--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,33 @@
 # Application name for identification
 spring.application.name=Sticky_notes
 
-# Use PORT environment variable for Cloud Run with fallback to 8082 for local development
-server.port=${PORT:8082}
+# Use PORT environment variable for Cloud Run with fallback to 8080 for local development
+server.port=${PORT:8080}
+
+# Common database settings
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Profile-specific properties will be loaded from application-{profile}.properties
+# Default to local profile if not specified
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:local}
 
 # Database connection settings
-# Use environment variables for Cloud Run, fallback to defaults for local development
+# For local development and Cloud Run
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/deividasstropus}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:admin}
-spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Cloud SQL specific settings
+spring.cloud.gcp.sql.enabled=${SPRING_CLOUD_GCP_SQL_ENABLED:false}
+spring.cloud.gcp.sql.database-name=${SPRING_CLOUD_GCP_SQL_DATABASE_NAME:sticky_notes}
+spring.cloud.gcp.sql.instance-connection-name=${SPRING_CLOUD_GCP_SQL_INSTANCE_CONNECTION_NAME:rasyk-ka-nori:europe-west1:sticky-notes-db}
+
+# Connection pool settings
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1200000
 
 # Hibernate and JPA settings for PostgreSQL
 # Configure Hibernate dialect for PostgreSQL
