--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 # Application name for identification
 spring.application.name=Sticky_notes
 
-# Use PORT environment variable for Cloud Run with fallback to 8080 for local development
-server.port=${PORT:8080}
+# Use PORT environment variable for Cloud Run with fallback to 8081 for local development
+# Note: Deployment to Cloud Run should still use port 8080 (via PORT env variable)
+server.port=${PORT:8081}
 
 # Common database settings
 spring.datasource.driver-class-name=org.postgresql.Driver
