--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,14 +1,8 @@
-# Test database configuration using H2 in-memory database
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
+# Database configuration for PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/deividasstropus
+spring.datasource.username=deividasstropus
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Hibernate and JPA settings for H2
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 
-# Disable schema.sql execution for tests
-spring.sql.init.mode=never
+
