--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 # Application name for identification
-spring.application.name=Sticky_notes
+spring.application.name=sticky-notes
 
+# Use PORT environment variable for Cloud Run with fallback to 8081 for local development
+# Note: Deployment to Cloud Run should still use port 8080 (via PORT env variable)
+server.port=${PORT:8081}
+
+# Server port configuration
 # Use PORT environment variable for Cloud Run with fallback to 8081 for local development
 # Note: Deployment to Cloud Run should still use port 8080 (via PORT env variable)
 server.port=${PORT:8081}
@@ -13,21 +18,30 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:local}
 
 # Database connection settings
-# For local development and Cloud Run
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/deividasstropus}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:admin}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Hibernate/JPA properties
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+# Connection pool settings
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
 
 # Cloud SQL specific settings
 spring.cloud.gcp.sql.enabled=${SPRING_CLOUD_GCP_SQL_ENABLED:false}
 spring.cloud.gcp.sql.database-name=${SPRING_CLOUD_GCP_SQL_DATABASE_NAME:sticky_notes}
 spring.cloud.gcp.sql.instance-connection-name=${SPRING_CLOUD_GCP_SQL_INSTANCE_CONNECTION_NAME:rasyk-ka-nori:europe-west1:sticky-notes-db}
 
-# Connection pool settings
-spring.datasource.hikari.maximum-pool-size=5
-spring.datasource.hikari.minimum-idle=2
-spring.datasource.hikari.connection-timeout=20000
-spring.datasource.hikari.idle-timeout=300000
 spring.datasource.hikari.max-lifetime=1200000
 
 # Hibernate and JPA settings for PostgreSQL
@@ -51,9 +65,38 @@ management.endpoints.web.exposure.include=health,info
 # If you plan to use Spring profiles (e.g., for Cloud Run), you can set them here:
 # spring.profiles.active=cloud-run
 
-# Logging settings for better visibility in Cloud Run (optional)
-logging.level.org.springframework.web=INFO
-logging.level.org.hibernate=ERROR
+# Logging configuration
+logging.level.root=INFO
+logging.level.com.Sticky_notes=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.jdbc=DEBUG
+logging.level.org.springframework.transaction=DEBUG
+
+# Show SQL bind parameters
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.type=trace
+
+# Log all HTTP requests
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+
+# Log SQL statements and parameters
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# JWT Configuration - Must be at least 256 bits (32 characters) for HMAC-SHA algorithms
+app.jwtSecret=stickyNotesSecretKey123!@#ThisIsAVeryStrongKey12345
+
+# Access token expires in 15 minutes (15 * 60 * 1000 = 900000 ms)
+app.jwtExpirationMs=900000
+
+# Refresh token expires in 7 days (7 * 24 * 60 * 60 * 1000 = 604800000 ms)
+# Note: In production, consider using refresh token rotation and revocation
+app.jwtRefreshExpirationMs=604800000
 
 # CORS Configuration
 # Disable Spring's CORS handling as we're using a custom filter
