--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,11 +1,28 @@
 # Test database configuration using H2 in-memory database
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 
 # Hibernate and JPA settings for H2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+# JWT Configuration
+app.jwtSecret=testSecretKey123456789012345678901234567890
+app.jwtExpirationMs=86400000
+app.jwtRefreshExpirationMs=86400000
+
+# Security
+spring.security.user.name=test
+spring.security.user.password=test
+
+# Disable CSRF for testing
+spring.security.csrf.enabled=false
+
+# Logging
+logging.level.org.springframework.security=DEBUG
+logging.level.com.Sticky_notes=DEBUG
