--- a/sticky-notes/package.json
+++ b/sticky-notes/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "esbuild": "^0.25.1",
+    "framer-motion": "^12.12.2",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dnd": "^16.0.1",
@@ -47,7 +48,9 @@
   },
   "jest": {
     "testEnvironment": "jsdom",
-    "setupFilesAfterEnv": ["./jest.setup.js"],
+    "setupFilesAfterEnv": [
+      "./jest.setup.js"
+    ],
     "transform": {
       "^.+\\.(js|jsx)$": "babel-jest"
     }
