--- a/sticky-notes/package.json
+++ b/sticky-notes/package.json
@@ -21,7 +21,8 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
-    "react-router-dom": "^7.3.0"
+    "react-router-dom": "^7.3.0",
+    "styled-components": "^6.1.18"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.9",
