--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.4.3</version> <!-- Check for 3.4.4 or 3.5.x as of Feb 2025 -->
+        <version>3.4.8</version>
         <relativePath/> <!-- Lookup parent from repository -->
     </parent>
 
