cleaning up/ app works

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,7 +52,7 @@ logging.level.org.springframework.transaction=DEBUG
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 
 # JWT Configuration - Must be at least 256 bits (32 characters) for HMAC-SHA algorithms
-app.jwtSecret=stickyNotesSecretKey123!@#ThisIsAVeryStrongKey12345
+app.jwtSecret=${JWT_SECRET}
 
 # Access token expires in 15 minutes (15 * 60 * 1000 = 900000 ms)
 app.jwtExpirationMs=900000
