--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     </parent>
 
     <!-- Project coordinates -->
-    <groupId>com.stickynotes</groupId>
+    <groupId>com.Sticky_notes.Sticky_notes</groupId>
     <artifactId>sticky-notes</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>StickyNotes</name>
@@ -21,7 +21,7 @@
 
     <!-- Properties -->
     <properties>
-        <java.version>23</java.version>
+        <java.version>21</java.version>
         <node.version>v20.17.0</node.version> <!-- Latest LTS as of Feb 2025 assumption -->
         <npm.version>10.8.2</npm.version> <!-- Compatible with Node 20.17.0 -->
         <frontend.skip>false</frontend.skip> <!-- Can be overridden with -Dfrontend.skip=true -->
@@ -164,7 +164,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version> <!-- Update to a stable version -->
+                <version>3.13.0</version> <!-- Update to a stable version -->
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
