--- a/sticky-notes/package.json
+++ b/sticky-notes/package.json
@@ -12,6 +12,10 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/material": "^7.3.1",
     "axios": "^1.7.9",
     "esbuild": "^0.25.1",
     "framer-motion": "^12.12.2",
