--- a/sticky-notes/package.json
+++ b/sticky-notes/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
     "axios": "^1.7.9",
+    "dompurify": "^3.2.6",
     "esbuild": "^0.25.1",
     "framer-motion": "^12.12.2",
     "react": "^18.3.1",
