--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,16 +51,12 @@ logging.level.org.springframework.jdbc=DEBUG
 logging.level.org.springframework.transaction=DEBUG
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 
-# JWT Configuration - Must be at least 256 bits (32 characters) for HMAC-SHA algorithms
+# JWT Configuration 
 app.jwtSecret=${JWT_SECRET}
 
-# Access token expires in 15 minutes (15 * 60 * 1000 = 900000 ms)
+# Access token expires in 15 minutes 
 app.jwtExpirationMs=900000
 
-# Refresh token expires in 7 days (7 * 24 * 60 * 60 * 1000 = 604800000 ms)
-# Note: In production, consider using refresh token rotation and revocation
+# Refresh token expires in 7 days 
 app.jwtRefreshExpirationMs=604800000
 
-# CORS Configuration
-# Disable Spring's CORS handling as we're using a custom filter
-spring.web.cors.enabled=false
