Add documentation and update configuration files
- Add .env.example, DOCUMENTATION.md, and ONBOARDING.md
- Update security and JWT configuration
- Modify CORS and web configuration
- Update application main class
- Add and update test files
- Update run script and dependencies

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -11,6 +11,9 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
+# Disable SQL script initialization for tests
+spring.sql.init.mode=never
+
 # JWT Configuration
 app.jwtSecret=testSecretKey123456789012345678901234567890
 app.jwtExpirationMs=86400000
