--- a/sticky-notes/package.json
+++ b/sticky-notes/package.json
@@ -3,13 +3,21 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "main": "public/electron.cjs",
   "scripts": {
     "dev": "vite",
     "start": "vite",
     "build": "vite build",
     "test": "jest",
     "test:watch": "jest --watch",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron": "electron .",
+    "electron-dev": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && electron .\"",
+    "electron-build": "npm run build && electron-builder",
+    "electron-build-mac": "npm run build && electron-builder --mac",
+    "electron-build-win": "npm run build && electron-builder --win",
+    "electron-build-all": "npm run build && electron-builder --mac --win",
+    "release": "npm run build && electron-builder --publish always"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -18,6 +26,7 @@
     "@mui/material": "^7.3.1",
     "axios": "^1.7.9",
     "dompurify": "^3.2.6",
+    "electron-updater": "^6.7.3",
     "esbuild": "^0.25.1",
     "framer-motion": "^12.12.2",
     "react": "^18.3.1",
@@ -41,6 +50,9 @@
     "@vitejs/plugin-react": "^1.3.2",
     "autoprefixer": "^10.4.21",
     "babel-jest": "^29.7.0",
+    "concurrently": "^9.2.1",
+    "electron": "^40.1.0",
+    "electron-builder": "^26.4.0",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
@@ -50,7 +62,8 @@
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.14",
-    "vite": "^6.2.2"
+    "vite": "^6.2.2",
+    "wait-on": "^9.0.3"
   },
   "jest": {
     "testEnvironment": "jsdom",
@@ -59,6 +72,32 @@
     ],
     "transform": {
       "^.+\\.(js|jsx)$": "babel-jest"
+    }
+  },
+  "build": {
+    "appId": "com.stickynotes.app",
+    "productName": "Sticky Notes",
+    "directories": {
+      "output": "dist-electron"
+    },
+    "files": [
+      "dist/**/*",
+      "!dist/electron.cjs",
+      "public/electron.cjs"
+    ],
+    "publish": {
+      "provider": "github",
+      "owner": "HalfBad-dnb",
+      "repo": "Sticky-Notes"
+    },
+    "mac": {
+      "category": "public.app-category.productivity"
+    },
+    "win": {
+      "target": "nsis"
+    },
+    "linux": {
+      "target": "AppImage"
     }
   }
 }
