--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,3 +60,8 @@ app.jwtExpirationMs=900000
 # Refresh token expires in 7 days 
 app.jwtRefreshExpirationMs=604800000
 
+# Stripe Configuration
+stripe.secret.key=${STRIPE_SECRET_KEY}
+stripe.publishable.key=${STRIPE_PUBLISHABLE_KEY}
+stripe.webhook.secret=${STRIPE_WEBHOOK_SECRET}
+
