--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,13 @@
             <artifactId>h2</artifactId>
             <scope>test</scope>
         </dependency>
+        
+        <!-- Stripe Java SDK -->
+        <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+            <version>28.0.0</version>
+        </dependency>
     </dependencies>
 
     <!-- Build configuration -->
