--- a/sticky-notes/package.json
+++ b/sticky-notes/package.json
@@ -24,6 +24,8 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
+    "@stripe/react-stripe-js": "^5.6.0",
+    "@stripe/stripe-js": "^8.7.0",
     "axios": "^1.7.9",
     "dompurify": "^3.2.6",
     "electron-updater": "^6.7.3",
