Prisma integration / set up API

--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,13 @@ SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/sticky_notes
 SPRING_DATASOURCE_USERNAME=your_username
 SPRING_DATASOURCE_PASSWORD=your_password
 
+# Prisma/Supabase Database URL
+DATABASE_URL="postgresql://postgres:[YOUR_SUPABASE_PASSWORD]@db.your-project-id.supabase.co:5432/postgres"
+
 # Cloud SQL settings (for production)
 SPRING_CLOUD_GCP_SQL_ENABLED=false
 SPRING_CLOUD_GCP_SQL_DATABASE_NAME=sticky_notes
-SPRING_CLOUD_GCP_SQL_INSTANCE_CONNECTION_NAME=your-project:your-region:your-instance
+SPRING_CLOUD_GCP_SQL_INSTANCE_CONNECTION_NAME=your-project-id:your-region:your-instance  # Format: project-id:region:instance-name (e.g., my-project:us-central1:my-instance)
 
 # Application profile
 SPRING_PROFILES_ACTIVE=local
