--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,8 @@ server.port=${PORT:8081}
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:local}
 
 # Database connection settings
-spring.datasource.url=${SPRING_DATASOURCE_URL}
+# Use Prisma DATABASE_URL for Supabase, fallback to Spring datasource for local development
+spring.datasource.url=${DATABASE_URL:${SPRING_DATASOURCE_URL}}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
