--- a/sticky-notes/.env.example
+++ b/sticky-notes/.env.example
@@ -1,24 +1,4 @@
 # Frontend Environment Variables
+VITE_API_BASE_URL=http://localhost:8081/api
+VITE_APP_TITLE=Sticky Notes
 REACT_APP_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
-
-# Backend Environment Variables (set these in your system environment or .env file)
-# Database Configuration
-SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/sticky_notes
-SPRING_DATASOURCE_USERNAME=your_db_username
-SPRING_DATASOURCE_PASSWORD=your_db_password
-
-# JWT Configuration
-JWT_SECRET=your_super_secret_jwt_key_here_at_least_256_bits_long
-
-# Stripe Configuration (optional - if not set, payment features will be disabled)
-STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
-STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
-STRIPE_WEBHOOK_SECRET=whsec_your_stripe_webhook_secret_here
-
-# Spring Profiles
-SPRING_PROFILES_ACTIVE=local
-
-# Google Cloud SQL (optional - for cloud deployment)
-SPRING_CLOUD_GCP_SQL_ENABLED=false
-SPRING_CLOUD_GCP_SQL_DATABASE_NAME=sticky_notes
-SPRING_CLOUD_GCP_SQL_INSTANCE_CONNECTION_NAME=your-project:your-region:your-instance
