Gemini in message agent ( innit need adjustments )

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,10 +10,10 @@ server.port=${PORT:8081}
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:local}
 
 # Database connection settings
-# Use Prisma DATABASE_URL for Supabase, fallback to Spring datasource for local development
-spring.datasource.url=${DATABASE_URL:${SPRING_DATASOURCE_URL}}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+# Database connection settings - Use Supabase DATABASE_URL components
+spring.datasource.url=jdbc:postgresql://aws-1-eu-west-3.pooler.supabase.com:5432/postgres?sslmode=require
+spring.datasource.username=postgres.ivdkwsiabmzjjpvbacay
+spring.datasource.password=Tz36Scw@Mun2qkx8
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate/JPA properties
@@ -31,10 +31,6 @@ spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.idle-timeout=600000
 spring.datasource.hikari.max-lifetime=1200000
 
-# Cloud SQL specific settings
-spring.cloud.gcp.sql.enabled=${SPRING_CLOUD_GCP_SQL_ENABLED:false}
-spring.cloud.gcp.sql.database-name=${SPRING_CLOUD_GCP_SQL_DATABASE_NAME:sticky_notes}
-spring.cloud.gcp.sql.instance-connection-name=${SPRING_CLOUD_GCP_SQL_INSTANCE_CONNECTION_NAME:rasyk-ka-nori:europe-west1:sticky-notes-db}
 
 # Health and info endpoints for monitoring
 management.endpoint.health.show-details=always
@@ -66,3 +62,7 @@ stripe.secret.key=${STRIPE_SECRET_KEY}
 stripe.publishable.key=${STRIPE_PUBLISHABLE_KEY}
 stripe.webhook.secret=${STRIPE_WEBHOOK_SECRET}
 
+
+# Gemini AI Configuration
+gemini.api.key=${GEMINI_API_KEY}
+gemini.model=${GEMINI_MODEL:gemini-2.0-flash}
