aplication properties fix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,10 @@ server.port=${PORT:8081}
 # Default to local profile if not specified
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:local}
 
-# Database connection settings
 # Database connection settings - Use Supabase DATABASE_URL components
-spring.datasource.url=jdbc:postgresql://aws-1-eu-west-3.pooler.supabase.com:5432/postgres?sslmode=require
-spring.datasource.username=postgres.ivdkwsiabmzjjpvbacay
-spring.datasource.password=Tz36Scw@Mun2qkx8
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate/JPA properties
